run python script

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -26,3 +26,5 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v3
+      - name: run python script
+        run: py ./testActions/pyScript.py
