edit script path

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -27,4 +27,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: run python script
-        run: py ./testActions/pyScript.py
+        run: py ./pyScript.py
