--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,6 +25,8 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    - name: sync
+    - uses: actions/checkout@v3
     - name: Set the initial value
       id: step_one
       run: |
